In machine_learning_template.ipynb > EDA > Bivariate EDA section: Rename sections for Scatter Plots and Bar Plots to Visualize Relationships and update markdown documentation comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1871,7 +1871,7 @@
    "metadata": {},
    "source": [
     "## Bivariate EDA  \n",
-    "Analyze relationships between two columns using correlations, scatter plots, group-wise statistics, and bar plots."
+    "Analyze relationships between two columns using correlations and group-wise statistics and visualize relationships using scatter plots and bar plots."
    ]
   },
   {
@@ -1880,7 +1880,7 @@
    "metadata": {},
    "source": [
     "### Numerical x Numerical  \n",
-    "Analyze relationships between two numerical columns using correlation coefficients and scatter plots. "
+    "Analyze relationships between two numerical columns using correlation coefficients and visualize relationships using scatter plots. "
    ]
   },
   {
@@ -1970,7 +1970,7 @@
    "id": "54741433-1f70-4248-982e-318bba474e15",
    "metadata": {},
    "source": [
-    "#### Scatter Plots"
+    "#### Visualize Relationships"
    ]
   },
   {
@@ -2008,7 +2008,7 @@
    "id": "4a6c0cc0-34f1-4f4c-b8d0-2243ce6f4e4d",
    "metadata": {},
    "source": [
-    "Scatter plot matrix that shows the relationships between all numerical columns.  \n",
+    "Scatter plot matrix that visualizes the relationships between all numerical columns.  \n",
     "Example code for 6 numerical columns, resulting in 15 scatter plots in a 5x3 matrix."
    ]
   },
@@ -2066,7 +2066,7 @@
    "metadata": {},
    "source": [
     "### Numerical x Categorical  \n",
-    "Analyze relationships between a numerical column and a categorical column using group-wise statistics (e.g., median or mean by category) and bar plots to compare statistics by category."
+    "Analyze relationships between a numerical column and a categorical column using group-wise statistics (e.g., median or mean by category) and visualize relationships using bar plots."
    ]
   },
   {
@@ -2152,7 +2152,7 @@
    "id": "7fd0cd54-3004-408b-a1b6-4874e034fd71",
    "metadata": {},
    "source": [
-    "#### Bar Plots"
+    "#### Visualize Relationships"
    ]
   },
   {
@@ -2160,7 +2160,7 @@
    "id": "f6acc3f3-f656-4dc9-a761-30d20d9d4425",
    "metadata": {},
    "source": [
-    "Bar plot of the median of a single numerical column by a single categorical column."
+    "Bar plot of the median of a single numerical column grouped by a single categorical column."
    ]
   },
   {
@@ -2190,7 +2190,7 @@
    "id": "8284c210-2e79-4152-903d-71a2f4e98cfa",
    "metadata": {},
    "source": [
-    "Bar plot matrix that shows the median of all numerical columns by a single categorical column (e.g., the categorical target variable).  \n",
+    "Bar plot matrix that visualizes the relationships between all numerical columns and a single categorical column (e.g., the categorical target variable).  \n",
     "Example code for 6 bar plots in a 2x3 matrix."
    ]
   },
@@ -2229,7 +2229,7 @@
    "id": "23ec66e0-2f7f-49c4-847b-f7b696217640",
    "metadata": {},
    "source": [
-    "Bar plot matrix that shows the median of a single numerical column (e.g., the numerical target variable) by all categorical columns.  \n",
+    "Bar plot matrix that visualizes the relationships of a single numerical column (e.g., the numerical target variable) and all categorical columns.  \n",
     "Example code for 5 bar plots in a 2x3 matrix."
    ]
   },
