In machine_learning_template.ipynb > EDA > Bivariate EDA section: Add Categorical x Categorical section with subsection for Contingency Tables

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2265,6 +2265,43 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f5a9ea87-8c72-4975-b86c-e3747dad9d51",
+   "metadata": {},
+   "source": [
+    "### Categorical x Categorical\n",
+    "Analyze relationships between two categorical columns using contingency tables and visualize relationships using grouped bar plots."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af880d65-3f35-4493-8c25-eadd5a65217f",
+   "metadata": {},
+   "source": [
+    "#### Contingency Tables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f022ac7-b8bb-42e5-b872-6904e8bc0936",
+   "metadata": {},
+   "source": [
+    "Contingency table between two categorical columns. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5924a18e-26e9-443a-a635-1c5d2173f8e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Contingency table with relative frequencies (%)\n",
+    "contingency_table = pd.crosstab(df_train[\"categorical_column_1\"], df_train[\"categorical_column_2\"], normalize=True) * 100\n",
+    "contingency_table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c25b7d67-27ed-4716-8c3f-079e2d239339",
    "metadata": {},
    "source": [
