In machine_learning_template.ipynb > EDA > Bivariate EDA > Categorical x Categorical > Contingency Tables section: Add heatmap of contingency table for two categorical columns

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2301,6 +2301,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f82d664d-56aa-44d0-bf65-f9b67af0ce3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Heatmap of contingency table\n",
+    "sns.heatmap(\n",
+    "    contingency_table, \n",
+    "    cmap=\"viridis\",  # Colorblind-friendly colormap (other options: \"cividis\", \"magma\", \"YlOrBr\", \"RdBu\") \n",
+    "    annot=True,  # Show frequencies (%)\n",
+    "    fmt=\".1f\",  # Format as float with 1 decimal\n",
+    "    linewidth=0.5  # Thin white lines between cells\n",
+    ")\n",
+    "plt.title(f\"{contingency_table.index.name.title().replace('_', ' ')} vs. {contingency_table.columns.name.title().replace('_', ' ')}\")\n",
+    "plt.xlabel(contingency_table.index.name.title().replace('_', ' '))\n",
+    "plt.ylabel(contingency_table.columns.name.title().replace('_', ' '))\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c25b7d67-27ed-4716-8c3f-079e2d239339",
    "metadata": {},
