In machine_learning_template.ipynb > EDA > Bivariate EDA > Categorical x Categorical > Contingency Tables section: Add contingency tables for all pairs of categorical columns

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2324,6 +2324,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "227165f0-b70e-40a2-ad50-28e416423e8b",
+   "metadata": {},
+   "source": [
+    "Contingency tables between all pairs of categorical columns. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a4272a1-137c-4438-aa13-c362a15b6a7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports\n",
+    "import itertools\n",
+    "\n",
+    "# Dictionary to store contingency tables\n",
+    "crosstabs = {}\n",
+    "\n",
+    "# Get all possible pairs of categorical and boolean columns\n",
+    "categorical_column_pairs = tuple(itertools.combinations(categorical_columns + boolean_columns, 2))\n",
+    "\n",
+    "# Create contingency tables for all column pairs\n",
+    "for column_1, column_2 in categorical_column_pairs:\n",
+    "    crosstabs[(column_1, column_2)] = pd.crosstab(df_train[column_1], df_train[column_2], normalize=True) * 100\n",
+    "\n",
+    "# Show contingency tables\n",
+    "for column_pair, contigeny_table in crosstabs.items():\n",
+    "    print(f\"\\nContingency Table: {column_pair[0].title().replace('_', ' ')} vs. {column_pair[1].title().replace('_', ' ')}\")\n",
+    "    print(contigeny_table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c25b7d67-27ed-4716-8c3f-079e2d239339",
    "metadata": {},
    "source": [
