In machine_learning_template.ipynb > EDA > Bivariate EDA > Categorical x Categorical section: Add section Visualize Relationships with grouped bar plot between two categorical columns

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2358,6 +2358,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7b9f0aa9-d935-47cb-934c-7c42249fc423",
+   "metadata": {},
+   "source": [
+    "#### Visualize Relationships"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bb55c9c-2812-4082-8bb0-d2d243c009b1",
+   "metadata": {},
+   "source": [
+    "Grouped bar plot between two categorical columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df1bbb83-5b85-4825-89f0-23994b13b22f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grouped bar plot \n",
+    "contingency_table.plot(kind=\"bar\")\n",
+    "plt.title(f\"{contingency_table.index.name.title()} vs. {contingency_table.columns.name.title()}\")\n",
+    "plt.xlabel(contingency_table.index.name.title())\n",
+    "plt.ylabel(\"Frequency (%)\")\n",
+    "plt.legend(title=f\"{contingency_table.columns.name.title()}\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c25b7d67-27ed-4716-8c3f-079e2d239339",
    "metadata": {},
    "source": [
