--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2341,17 +2341,17 @@
     "import itertools\n",
     "\n",
     "# Dictionary to store contingency tables\n",
-    "crosstabs = {}\n",
+    "contingency_table_dict = {}\n",
     "\n",
     "# Get all possible pairs of categorical and boolean columns\n",
     "categorical_column_pairs = tuple(itertools.combinations(categorical_columns + boolean_columns, 2))\n",
     "\n",
     "# Create contingency tables for all column pairs\n",
     "for column_1, column_2 in categorical_column_pairs:\n",
-    "    crosstabs[(column_1, column_2)] = pd.crosstab(df_train[column_1], df_train[column_2], normalize=True) * 100\n",
+    "    contingency_table_dict[(column_1, column_2)] = pd.crosstab(df_train[column_1], df_train[column_2], normalize=True) * 100\n",
     "\n",
     "# Show contingency tables\n",
-    "for column_pair, contigeny_table in crosstabs.items():\n",
+    "for column_pair, contigeny_table in contingency_table_dict.items():\n",
     "    print(f\"\\nContingency Table: {column_pair[0].title().replace('_', ' ')} vs. {column_pair[1].title().replace('_', ' ')}\")\n",
     "    print(contigeny_table)"
    ]
