In machine_learning_template.ipynb > EDA > Bivariate EDA > Categorical x Categorical > Visualize Relationships section: Add grouped bar plot matrix to visualize relationships between all categorical column pairs

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2390,6 +2390,62 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0b0192da-1297-4ca3-8523-014a630298a5",
+   "metadata": {},
+   "source": [
+    "Grouped bar plot matrix that visualizes the relationships between all pairs of categorical columns.  \n",
+    "Example code for 6 categorical columns, resulting in 15 grouped bar plots in a 5x3 matrix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90913520-5399-4842-9476-3a71b2db052f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def grouped_barplot_matrix(df, categorical_columns):\n",
+    "    # Get all possible pairs of categorical columns\n",
+    "    column_pairs = tuple(itertools.combinations(categorical_columns, 2))\n",
+    "    \n",
+    "    # Calculate number of rows and columns needed for the subplot grid\n",
+    "    n_plots = len(column_pairs)\n",
+    "    n_cols = 3  \n",
+    "    n_rows = math.ceil(n_plots / n_cols) \n",
+    "    \n",
+    "    # Create figure with appropriate size\n",
+    "    # Adjust the multipliers (4, 4) to make plots larger or smaller\n",
+    "    plt.figure(figsize=(n_cols * 4, n_rows * 4))\n",
+    "    \n",
+    "    # Create grouped bar plots for each pair\n",
+    "    for i, (column_1, column_2) in enumerate(column_pairs):\n",
+    "        # Create subplot\n",
+    "        ax = plt.subplot(n_rows, n_cols, i + 1)\n",
+    "\n",
+    "        # Create contingency table with frequency (%)\n",
+    "        contingency_table = pd.crosstab(df[column_1], df[column_2], normalize=True) * 100\n",
+    "        \n",
+    "        # Create grouped bar plot\n",
+    "        contingency_table.plot(kind=\"bar\", ax=ax)\n",
+    "        \n",
+    "        # Add title and labels\n",
+    "        plt.title(f\"{column_1.title().replace('_', ' ')} vs. {column_2.title().replace('_', ' ')}\")\n",
+    "        plt.xlabel(column_1.title().replace('_', ' '))\n",
+    "        plt.ylabel(\"Frequency (%)\")\n",
+    "        plt.legend(title=f\"{column_2.title().replace('_', ' ')}\")\n",
+    "    \n",
+    "    # Adjust layout to prevent overlap\n",
+    "    plt.tight_layout()\n",
+    "    \n",
+    "    # Show the plot\n",
+    "    plt.show()\n",
+    "\n",
+    "# Use function to create grouped bar plot matrix \n",
+    "grouped_barplot_matrix(df_train, categorical_columns + boolean_columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c25b7d67-27ed-4716-8c3f-079e2d239339",
    "metadata": {},
    "source": [
