In machine_learning_template.ipynb > EDA > Bivariate EDA > Categorical x Categorical > Visualize Relationships section: Update markdown documentation comments for grouped bar plot matrix

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2394,7 +2394,7 @@
    "metadata": {},
    "source": [
     "Grouped bar plot matrix that visualizes the relationships between all pairs of categorical columns.  \n",
-    "Example code for 6 categorical columns, resulting in 15 grouped bar plots in a 5x3 matrix."
+    "For example, 6 categorical columns would result in 15 grouped bar plots in a 5x3 matrix."
    ]
   },
   {
