In machine_learning_template.ipynb > EDA > Bivariate EDA > Numerical x Numerical > Visualize Relationships section: Update markdown documentation comments for scatter plot matrix

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2008,8 +2008,8 @@
    "id": "4a6c0cc0-34f1-4f4c-b8d0-2243ce6f4e4d",
    "metadata": {},
    "source": [
-    "Scatter plot matrix that visualizes the relationships between all numerical columns.  \n",
-    "Example code for 6 numerical columns, resulting in 15 scatter plots in a 5x3 matrix."
+    "Scatter plot matrix that visualizes the relationships between all pairs of numerical columns.  \n",
+    "For example, 6 numerical columns would result in 15 scatter plots in a 5x3 matrix."
    ]
   },
   {
