In machine_learning_template.ipynb: Add project title, author and date

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2,6 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "de74f1f2-9ad3-4f9f-b6c6-0adccaacc5db",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:center; font-size:36px; font-weight:bold; color:#4A4A4A; background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "    Machine Learning Template\n",
+    "</div>\n",
+    "\n",
+    "<p style=\"text-align:center; font-size:14px; color:#4A4A4A; margin-top:5px;\">\n",
+    "    Author: Jens Bender <br> \n",
+    "    February 2025\n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cbf7c4ae-408e-4aeb-9fe9-e20263d2ac7f",
    "metadata": {},
    "source": [
