In machine_learning_template.ipynb > Setup section: Add textbox for markdown documentation comments using html

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5,11 +5,11 @@
    "id": "de74f1f2-9ad3-4f9f-b6c6-0adccaacc5db",
    "metadata": {},
    "source": [
-    "<div style=\"text-align:center; font-size:36px; font-weight:bold; color:#4A4A4A; background-color:#fff6e4; padding:15px; border-width:3px; border-color:#f5ecda; border-style:solid; border-radius:6px\">\n",
+    "<div style=\"text-align:center; font-size:36px; font-weight:bold; color:#4A4A4A; background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px\">\n",
     "    Machine Learning Template\n",
     "</div>\n",
     "\n",
-    "<p style=\"text-align:center; font-size:14px; color:#4A4A4A; margin-top:5px;\">\n",
+    "<p style=\"text-align:center; font-size:14px; color:#4A4A4A; margin-top:10px;\">\n",
     "    Author: Jens Bender <br> \n",
     "    February 2025\n",
     "</p>"
@@ -179,11 +179,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4896aa22-da27-4d06-b34f-d63ceace4ff0",
+   "id": "4bb4caf6-1eef-4d0e-a40b-9878e1b82301",
    "metadata": {},
    "source": [
     "## Environment Variables \n",
-    "Note: Setting environment variables is optional, but it is recommended if you store sensitive information (such as API keys or database credentials) in a `.env` file. Using environment variables helps keep such information secure and separate from your codebase."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>⚠️ Important:</strong> Setting environment variables is optional, but it is recommended if you store sensitive information (such as API keys or database credentials) in a <code>.env</code> file. Using environment variables helps keep such information secure and separate from your codebase.\n",
+    "</div>"
    ]
   },
   {
