In machine_learning_template.ipynb > Data Loading and Inspection section: Add textbox for markdown documentation comments using html

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -184,7 +184,7 @@
    "source": [
     "## Environment Variables \n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    <strong>⚠️ Important:</strong> Setting environment variables is optional, but it is recommended if you store sensitive information (such as API keys or database credentials) in a <code>.env</code> file. Using environment variables helps keep such information secure and separate from your codebase.\n",
+    "    <strong>🔒 Security Note:</strong> Setting environment variables is optional, but it is recommended if you store sensitive information (such as API keys or database credentials) in a <code>.env</code> file. Using environment variables helps keep such information secure and separate from your codebase.\n",
     "</div>"
    ]
   },
@@ -220,11 +220,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3de96aef-7438-41fd-bd1d-8cdbdc0ed9cb",
+   "id": "e759d1c8-d6c7-4cc0-96fe-43ca5703d6c4",
    "metadata": {},
    "source": [
     "## CSV \n",
-    "Load data from a `.csv` file into a Pandas DataFrame."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Load data from a <code>.csv</code> file into a Pandas DataFrame.\n",
+    "</div>"
    ]
   },
   {
@@ -255,7 +257,9 @@
    "metadata": {},
    "source": [
     "## MySQL\n",
-    "Load data from a MySQL database table into a Pandas DataFrame."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Load data from a MySQL database table into a Pandas DataFrame.\n",
+    "</div>"
    ]
   },
   {
@@ -296,7 +300,9 @@
    "metadata": {},
    "source": [
     "## Initial Data Inspection  \n",
-    "Basic exploration of the dataset to understand its structure and detect obvious issues."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Basic exploration of the dataset to understand its structure and detect obvious issues.\n",
+    "</div>"
    ]
   },
   {
