In machine_learning_template.ipynb > Data Preprocessing section: Add textbox for markdown documentation in all subsections until Train-Validation-Test Split

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -345,11 +345,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "030b4bf1-d5e2-471e-9303-1afc4bcd2fcf",
+   "id": "a71abccc-09d1-4371-95d2-110a1d947522",
    "metadata": {},
    "source": [
-    "**Column Names**  \n",
-    "Convert all column names to snake_case for consistency, improved readability, and to minimize the risk of errors."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Column Names</strong> <br>\n",
+    "    📌 Convert all column names to snake_case for consistency, improved readability, and to minimize the risk of errors.\n",
+    "</div>"
    ]
   },
   {
@@ -373,8 +375,10 @@
    "id": "27289383-a18b-4e0e-9137-8dac6147f1fa",
    "metadata": {},
    "source": [
-    "**Categorical Labels**  \n",
-    "Convert all categorical labels to snake_case for consistency, improved readability, and to minimize the risk of errors. "
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Categorical Labels</strong> <br>\n",
+    "    📌 Convert all categorical labels to snake_case for consistency, improved readability, and to minimize the risk of errors.\n",
+    "</div>"
    ]
   },
   {
@@ -416,7 +420,9 @@
    "id": "ee509a36-86a0-4e56-bbeb-ecb29a809288",
    "metadata": {},
    "source": [
-    "Identify and remove duplicates based on all columns."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Identify and remove duplicates based on all columns.\n",
+    "</div>"
    ]
   },
   {
@@ -446,7 +452,9 @@
    "id": "a51b2986-ba9a-4182-9ae7-de5cc89cb98c",
    "metadata": {},
    "source": [
-    "Identify and remove duplicates based on the ID column."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Identify and remove duplicates based on the ID column.\n",
+    "</div>"
    ]
   },
   {
@@ -476,7 +484,9 @@
    "id": "a55f43e8-f544-414c-8979-d3a52b0b919d",
    "metadata": {},
    "source": [
-    "Identify and remove duplicates based on a combination of specific columns."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Identify and remove duplicates based on a combination of specific columns.\n",
+    "</div>"
    ]
   },
   {
@@ -514,7 +524,9 @@
    "id": "40cb6e08-4ce6-475c-a850-af4938b740f6",
    "metadata": {},
    "source": [
-    "Identify and convert incorrect storage data types."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Identify and convert incorrect storage data types.\n",
+    "</div>"
    ]
   },
   {
@@ -555,7 +567,9 @@
    "id": "1a5059d1-bc0d-4a7f-8d65-bdcee4328403",
    "metadata": {},
    "source": [
-    "Identify object columns with two unique categories and convert them to boolean columns."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Identify object columns with two unique categories and convert them to boolean columns.\n",
+    "</div>"
    ]
   },
   {
@@ -582,16 +596,37 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7dc58fb-44ed-46a4-b7aa-aa74f4d23d1f",
+   "id": "9116c8e3-2bcf-4843-bdd8-df3d1d920f6d",
    "metadata": {},
    "source": [
     "## Train-Validation-Test Split  \n",
-    "The ideal split depends on the dataset size and the task. A general guideline is:\n",
-    "\n",
-    "| Dataset Size                | Training Set | Validation Set | Test Set |\n",
-    "|:-----------------------------|--------------|----------------|----------|\n",
-    "| Smaller datasets (<10,000)   | 70%          | 15%            | 15%      |\n",
-    "| Larger datasets (≥10,000)    | 80%          | 10%            | 10%      | "
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 The ideal split depends on the dataset size and the task. A general guideline is:\n",
+    "    <table style=\"margin-left:0; margin-top:15px; border-collapse: collapse;\">\n",
+    "        <thead>\n",
+    "            <tr>\n",
+    "                <th style=\"text-align:left; background-color:#fff6e4; padding:8px;\">Dataset Size</th>\n",
+    "                <th style=\"text-align:left; background-color:#fff6e4; padding:8px;\">Training Set</th>\n",
+    "                <th style=\"text-align:left; background-color:#fff6e4; padding:8px;\">Validation Set</th>\n",
+    "                <th style=\"text-align:left; background-color:#fff6e4; padding:8px;\">Test Set</th>\n",
+    "            </tr>\n",
+    "        </thead>\n",
+    "        <tbody>\n",
+    "            <tr>\n",
+    "                <td style=\"background-color:#fff6e4; text-align:left; padding:8px;\">Smaller datasets (<10,000)</td>\n",
+    "                <td style=\"background-color:#fff6e4; text-align:left; padding:8px;\">70%</td>\n",
+    "                <td style=\"background-color:#fff6e4; text-align:left; padding:8px;\">15%</td>\n",
+    "                <td style=\"background-color:#fff6e4; text-align:left; padding:8px;\">15%</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td style=\"background-color:#f5ecda; text-align:left; padding:8px;\">Larger datasets (≥10,000)</td>\n",
+    "                <td style=\"background-color:#f5ecda; text-align:left; padding:8px;\">80%</td>\n",
+    "                <td style=\"background-color:#f5ecda; text-align:left; padding:8px;\">10%</td>\n",
+    "                <td style=\"background-color:#f5ecda; text-align:left; padding:8px;\">10%</td>\n",
+    "            </tr>\n",
+    "        </tbody>\n",
+    "    </table>\n",
+    "</div>"
    ]
   },
   {
