In machine_learning_template.ipynb > Data Preprocessing section: Add textbox for markdown documentation in all subsections from Engineering New Features until Handling Outliers

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -601,7 +601,7 @@
    "source": [
     "## Train-Validation-Test Split  \n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 The ideal split depends on the dataset size and the task. A general guideline is:\n",
+    "    ℹ️ The ideal split depends on the dataset size and the task. A general guideline is:\n",
     "    <table style=\"margin-left:0; margin-top:15px; border-collapse: collapse;\">\n",
     "        <thead>\n",
     "            <tr>\n",
@@ -673,7 +673,9 @@
    "metadata": {},
    "source": [
     "### From Raw Text\n",
-    "Derive a categorical, numerical, or boolean feature from a raw text column, which contains unstructured text data stored as strings."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Derive a categorical, numerical, or boolean feature from a raw text column, which contains unstructured text data stored as strings.\n",
+    "</div>"
    ]
   },
   {
@@ -681,8 +683,10 @@
    "id": "e1c9931c-d4f6-4255-a894-2be60a02c26e",
    "metadata": {},
    "source": [
-    "**Categorical Feature**  \n",
-    "Extract a categorical feature from a raw text column."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Categorical Feature</strong> <br>\n",
+    "    📌 Extract a categorical feature from a raw text column.\n",
+    "</div>"
    ]
   },
   {
@@ -722,8 +726,10 @@
    "id": "48f9089b-a2fd-4305-aa23-086332d45c01",
    "metadata": {},
    "source": [
-    "**Numerical Feature**    \n",
-    "Extract a numerical feature from a raw text column."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Numerical Feature</strong> <br>\n",
+    "    📌 Extract a numerical feature from a raw text column.\n",
+    "</div>"
    ]
   },
   {
@@ -758,8 +764,10 @@
    "id": "beba6942-83b2-4bd4-9223-94bfc963beef",
    "metadata": {},
    "source": [
-    "**Boolean Feature**    \n",
-    "Extract a boolean feature from a raw text column."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Boolean Feature</strong> <br>\n",
+    "    📌 Extract a boolean feature from a raw text column.\n",
+    "</div>"
    ]
   },
   {
@@ -787,7 +795,9 @@
    "metadata": {},
    "source": [
     "### From Categorical Text\n",
-    "Derive a new feature from a categorical text column, which contains a predefined set of unique categories respresented as strings."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Derive a new feature from a categorical text column, which contains a predefined set of unique categories respresented as strings.\n",
+    "</div>"
    ]
   },
   {
@@ -795,8 +805,10 @@
    "id": "8fdb54ce-f8dc-4103-97f4-451b3c238ef2",
    "metadata": {},
    "source": [
-    "**Target Encoding**  \n",
-    "Derive numerical feature from categorical text column by encoding categories based on the mean of the target variable. This method is especially useful for categorical columns with high cardinality (i.e., a large number of unique categories)."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Target Encoding</strong> <br>\n",
+    "    📌 Derive numerical feature from categorical text column by encoding categories based on the mean of the target variable. This method is especially useful for categorical columns with high cardinality (i.e., a large number of unique categories).\n",
+    "</div>"
    ]
   },
   {
@@ -824,10 +836,12 @@
    "id": "f07075cb-2601-4e9f-b1af-eb76d0c7c650",
    "metadata": {},
    "source": [
-    "**Tiering**  \n",
-    "Group categories into predefined tiers based on domain-specific factors that are relevant for predicting the target variable, using subject matter expertise. This method is useful for improving predictive performance and handling categorical columns with high cardinality (i.e., a large number of unique categories).\n",
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Tiering</strong> <br>\n",
+    "    📌 Group categories into predefined tiers based on domain-specific factors that are relevant for predicting the target variable, using subject matter expertise. This method is useful for improving predictive performance and handling categorical columns with high cardinality (i.e., a large number of unique categories). <br><br>\n",
     "\n",
-    "Example: Categorize 300+ cities into 3 tiers based on factors such as employment opportunities, cost of living, and population density."
+    "💡 Example: Categorize 300+ cities into 3 tiers based on factors such as employment opportunities, cost of living, and population density.\n",
+    "</div>"
    ]
   },
   {
@@ -872,7 +886,9 @@
    "metadata": {},
    "source": [
     "## Defining Semantic Type\n",
-    "Define semantic column types (numerical, categorical, boolean) for downstream tasks like additional preprocessing steps, exploratory data analysis, and machine learning."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Define semantic column types (numerical, categorical, boolean) for downstream tasks like additional preprocessing steps, exploratory data analysis, and machine learning.\n",
+    "</div>"
    ]
   },
   {
@@ -880,8 +896,10 @@
    "id": "6266e9b3-4b24-41e6-bd6d-b883f051ab6d",
    "metadata": {},
    "source": [
-    "**Manual**    \n",
-    "Option 1: Define semantic column types manually for small datasets or when you have specific requirements and need precise control."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Manual</strong> <br>\n",
+    "    📌 Option 1: Define semantic column types manually for small datasets or when you have specific requirements and need precise control.\n",
+    "</div>"
    ]
   },
   {
@@ -914,8 +932,10 @@
    "id": "52666e48-c4da-4f3d-ae3d-46329239f669",
    "metadata": {},
    "source": [
-    "**Programmatic**    \n",
-    "Option 2: Define semantic column types programmatically for large datasets or when you need to automate the process, ensuring efficiency and scalability."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Programmatic</strong> <br>\n",
+    "    📌 Option 2: Define semantic column types programmatically for large datasets or when you need to automate the process, ensuring efficiency and scalability.\n",
+    "</div>"
    ]
   },
   {
@@ -947,7 +967,9 @@
    "id": "a2379de8-3825-4f42-83c7-c2365289c059",
    "metadata": {},
    "source": [
-    "**Identification**"
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Identification</strong>\n",
+    "</div>"
    ]
   },
   {
@@ -976,18 +998,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83b7806d-1465-4747-8780-b2e28d51a468",
-   "metadata": {},
-   "source": [
-    "**Imputation**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "6c0c06ef-bbbf-4d18-bde4-e7a50fc1a1a3",
    "metadata": {},
    "source": [
-    "Impute missing values in a numerical column using the median. "
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Imputation</strong> <br>\n",
+    "    📌 Impute missing values in a numerical column using the median. \n",
+    "</div>"
    ]
   },
   {
@@ -1022,7 +1039,9 @@
    "id": "8018d4b9-c440-4b15-aafb-a4bb3a3e79fa",
    "metadata": {},
    "source": [
-    "Impute missing values in a categorical column using the mode (most frequent value)."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Impute missing values in a categorical column using the mode (most frequent value). \n",
+    "</div>"
    ]
   },
   {
@@ -1057,8 +1076,10 @@
    "id": "ed9519b6-a492-4308-abc0-89a470543652",
    "metadata": {},
    "source": [
-    "**Deletion**  \n",
-    "Delete rows with missing values on any column or a subset of columns."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Deletion</strong> <br>\n",
+    "    📌 Delete rows with missing values on any column or a subset of columns.\n",
+    "</div>"
    ]
   },
   {
@@ -1112,7 +1133,9 @@
    "metadata": {},
    "source": [
     "### 3SD Method  \n",
-    "Identify and remove univariate outliers in numerical columns by applying the 3 standard deviation (SD) rule. Specifically, a data point is considered an outlier if it falls more than 3 standard deviations above or below the mean of the column. "
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Identify and remove univariate outliers in numerical columns by applying the 3 standard deviation (SD) rule. Specifically, a data point is considered an outlier if it falls more than 3 standard deviations above or below the mean of the column. \n",
+    "</div>"
    ]
   },
   {
@@ -1201,7 +1224,9 @@
    "metadata": {},
    "source": [
     "### 1.5 IQR Method  \n",
-    "Identify and remove univariate outliers in numerical columns using the 1.5 interquartile range (IQR) rule. Specifically, a data point is considered an outlier if it falls more than 1.5 interquartile ranges above the third quartile (Q3) or below the first quartile (Q1) of the column.  "
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Identify and remove univariate outliers in numerical columns using the 1.5 interquartile range (IQR) rule. Specifically, a data point is considered an outlier if it falls more than 1.5 interquartile ranges above the third quartile (Q3) or below the first quartile (Q1) of the column. \n",
+    "</div>"
    ]
   },
   {
@@ -1291,7 +1316,9 @@
    "metadata": {},
    "source": [
     "### Isolation Forest\n",
-    "Identify and remove multivariate outliers using the isolation forest algorithm."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Identify and remove multivariate outliers using the isolation forest algorithm.\n",
+    "</div>"
    ]
   },
   {
